# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./vms";
 export * from "./access";
 export * from "./activity";
 export * from "./tokens";
+export * from "./requests";
